WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217887
[LFC][IFC] Inline level boxes are at the incorrect position when line is horizontally aligned
https://bugs.webkit.org/show_bug.cgi?id=217887
Summary
[LFC][IFC] Inline level boxes are at the incorrect position when line is hori...
alan
Reported
2020-10-17 20:25:11 PDT
ssia
Attachments
Patch
(1.80 KB, patch)
2020-10-17 20:27 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-10-17 20:27:50 PDT
Created
attachment 411696
[details]
Patch
EWS
Comment 2
2020-10-18 05:42:27 PDT
Committed
r268654
: <
https://trac.webkit.org/changeset/268654
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411696
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-18 05:43:20 PDT
<
rdar://problem/70417237
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug