[LFC][IFC] Inline level boxes are at the incorrect position when line is horizontally aligned https://bugs.webkit.org/show_bug.cgi?id=217887

Reviewed by Antti Koivisto.

Inline boxes (as opposed to runs) are constructed after the horizontal alignment is computed so their position
already includes the horizontal offset. No need to offset the again at logicalRectForInlineLevelBox.

* layout/inlineformatting/InlineLineBox.cpp:
(WebCore::Layout::LineBox::logicalRectForInlineLevelBox const):


Canonical link: https://commits.webkit.org/230612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268654 268f45cc-cd09-0410-ab3c-d52691b4dbfc